# tryango-client

./: .gitignore  CMakeLists.txt  Readme.txt  notes.txt
cmake/: FindMozilla.cmake  FindOpenSSL.cmake  GetOs.cmake  genChromeManifest.py  linux_name.py  pack.py
releases/: tryango-0.9.6-linux-Fedora-amd64.xpi  tryango-0.9.6-linux-Ubuntu-i386.xpi  tryango-0.9.6-linux-debian-amd64.xpi  tryango-0.9.6-macosx--amd64.xpi  tryango-0.9.6-win--i386.xpi
src/: CMakeLists.txt  chrome.manifest.in  install.rdf.in
src/certs/: tryango-cert.pem
src/chrome/content/: mailwindow.js  mailwindow.xul  tryango.js  tryango.xul  wrapperWorker.js
src/chrome/content/dialogs/: about.xul  help.js  help.xul  info.js  settings.js  settings.xul  signup.js  signup.xul
src/chrome/content/modules/: attachmentManager.jsm  cWrapper.jsm  dialogs.jsm  logger.jsm  maillistener.jsm  prefs.jsm  pwmanager.jsm  send.jsm  test.jsm  utils.jsm
src/chrome/locale/de/: about.html.in  help.html.in  lang.dtd  lang.properties
src/chrome/locale/en-GB/: help.html  help.html.in  lang.dtd  lang.properties
src/chrome/locale/en-US/: about.html.in  help.html  help.html.in  lang.dtd  lang.properties
src/chrome/locale/fr/: lang.dtd  lang.properties
src/chrome/skin/: cm_logo.xcf  overlay.css
src/components/: CMakeLists.txt  angClient.lzz  angCommon.cpp  angCommon.h  angPipe.lzz  angPipe.lzzMod  angProofs.lzz  angSsl.lzz  angWrapper.lzz  keyDb.lzz  logger.lzz  publicKeyDb.lzz  tryango.def  tryango.proto
src/components/pgp/: bufferFilter.cpp  bufferFilter.h  keyParser.lzz  messageHandler.lzz  packet.lzz  packetParser.lzz  secretKeyPair.lzz  signKey.lzz
src/components/rand/: a.out  rand.h  randport.c
src/components/test/: base64.hpp  cert8.db  clientTest.cc  common.hpp  key3.db  pPacketTest.cc  pgpTest.cc  secmod.db  sslTest.cc  verifyTest.cc  windowsTest.cc
src/defaults/preferences/: tryango_prefs.js
